fix logo visiblity

--- a/main.scss
+++ b/main.scss
@@ -397,6 +397,10 @@ section .test1 {
     width: 40px;
     height: 20px;
   }
+
+  section .test1{
+    font-size: 45px;
+  }
 }
 
 .f-speak2 {
