--- a/styles.css
+++ b/styles.css
@@ -382,6 +382,10 @@ section .test1 {
     width: 40px;
     height: 20px;
   }
+
+  section .test1 {
+    font-size: 45px;
+  }
 }
 .f-speak2 {
   font-family: lato1, arial, helvetica, sans-serif, times;
